# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
#
# SPDX-License-Identifier: Unlicense

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-displayio-gauge"
description = "Displayio widget that creates circular gauges that can have their fill value set dynamically."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Tim Cocks", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/circuitpython/CircuitPython_Org_DisplayIO_Gauge.git"}
keywords = [
    "adafruit",
    "accelerometer",
    "lis3dh",
    "acceleration",
    "hardware",
    "micropython",
    "circuitpython",
    "blinka",
    "displayio_gauge",
    "displayio widget",
    "gauge progressbar"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["displayio_gauge"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
