# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 GaryZ for CircuitPython Organization
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-displayio-gauge"
description = "A circular gauge that can be filled to a certain value. The origin is set using ``x`` and ``y`` coordinates relative to the center of the gauge."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "CircuitPython Organization", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/circuitpython/CircuitPython_Org_DisplayIO_Gauge"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "displayio_gauge",
    "displayio",
    "widget",
    "gauge",
    "progressbar",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["displayio_gauge"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
